# bevy_svelte

./: README.md  package.json  vite.config.ts
bevy_sprites/: Cargo.toml
bevy_sprites/src/: lib.rs
src/: App.svelte  main.ts
