[package]
name = "bevy_sprites"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_text",
    "webgl2",
] }
gloo-console = "0.3.0"
wasm-bindgen = "0.2.89"

[profile.release]
opt-level = "s"
